documentacao competencias
